test_regress/t/t_assert_dup_bad.out
%Error: t/t_assert_dup_bad.v:17:4: Duplicate declaration of block: 'covlabel'
   covlabel:   
   ^~~~~~~~
        t/t_assert_dup_bad.v:15:4: ... Location of original declaration
   covlabel:
   ^~~~~~~~
%Error: Exiting due to
